--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>majak</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Maják</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but majak doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but majak doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div class="container-fluid">
+      <div id="app"></div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
